pacman-app-deploy/01-pacman-deployment.yaml
# Create deployment:
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-deployment
  labels:
    app: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: ghcr.io/playground22/pacman:2.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
          limits:
            cpu: 500m
