pacman-app-deploy/02-pacman-clusterip-service.yaml
# Create service type ClusterIP:
apiVersion: v1
kind: Service
metadata:
  name: pacman-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: pacman
  ports:
    - port: 80
      targetPort: 80
