pacman-app-deploy/04-pacman-ingress.yaml
# Create ingress (ingress controller is managed by minikube):
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-ingress-guide-nginx-example.html
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pacman-namespace
  name: pacman-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pacman.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pacman-clusterip-service
                port:
                  number: 80
